--- a/crm/resources/css/app.css
+++ b/crm/resources/css/app.css
@@ -662,7 +662,7 @@
 }
 
 .space-action-button.p-button-secondary {
-  @apply text-gray-400 hover:text-white hover:bg-gray-700;
+  @apply text-yellow-500 hover:text-yellow-300 hover:bg-yellow-600/20;
 }
 
 .space-action-button.p-button-success {
@@ -674,7 +674,7 @@
 }
 
 .space-action-button.p-button-danger {
-  @apply text-red-400 hover:text-white hover:bg-red-600;
+  @apply text-red-500 hover:text-red-300 hover:bg-red-600/20;
 }
 
 .space-action-button.p-button-info {
